--- a/local_audio_player/config.json
+++ b/local_audio_player/config.json
@@ -8,6 +8,8 @@
   "stdin": true,
   "audio": true,
   "options": {},
-  "schema": {},
+  "schema": {"code": "str",
+    "requirements": ["str"],
+    "clean": "bool?"},
   "host_network": true
 }
