local audio player

--- a/local_audio_player/config.json
+++ b/local_audio_player/config.json
@@ -8,8 +8,6 @@
   "stdin": true,
   "audio": true,
   "options": {},
-  "schema": {"code": "str",
-    "requirements": ["str"],
-    "clean": "bool?"},
+  "schema": {},
   "host_network": true
 }
