--- a/local_audio_player/config.json
+++ b/local_audio_player/config.json
@@ -9,6 +9,7 @@
   "audio": true,
   "options": {},
   "schema": {},
-  "hassio api": "hassio", 
+  "hassio api": "hassio",
+  "homeassistant api": "http://hassio/homeassistant/api", 
   "host_network": true
 }
