hassio_api": "true",

--- a/local_audio_player/config.json
+++ b/local_audio_player/config.json
@@ -9,7 +9,7 @@
   "audio": true,
   "options": {},
   "schema": {},
-  "hassio_api": "hassio",
+  "hassio_api": "true",
   "homeassistant_api": "true", 
   "host_network": true
 }
