--- a/local_audio_player/Dockerfile
+++ b/local_audio_player/Dockerfile
@@ -2,12 +2,12 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Add env
-ENV LAN# Setup
+ENV LANG C.UTF-8
 
 # Setup base, install sox package
 RUN apk add --no-cache jq sox
 
-# Copy  data
+# Copy data
 COPY run.sh /
 RUN chmod a+x /run.sh
 
