--- a/hc-sr04/Dockerfile
+++ b/hc-sr04/Dockerfile
@@ -5,6 +5,15 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 RUN apk add --no-cache jq
 RUN apk add --no-cache py2-pip
+RUN apk add --no-cache clang
+RUN apk add --no-cache libgcc
+RUN apk add --no-cache gcc-gnat
+RUN apk add --no-cache libgc++
+RUN apk add --no-cache g++
+RUN apk add --no-cache make
+RUN apk add --no-cache libffi-dev
+RUN apk add --no-cache openssl-dev
+RUN apk add --no-cache python2-dev
 RUN apk add --no-cache mosquitto
 RUN apk add --no-cache mosquitto-dev
 RUN apk add --no-cache mosquitto-clients
