"requirements": [     "rpi-rf"   ],

--- a/hc-sr04/config.json
+++ b/hc-sr04/config.json
@@ -11,6 +11,9 @@
     "ports": {"5055/tcp": null},
     "options": {
   "code": "/share/range_sensor.py",
+  "requirements": [
+    "rpi-rf"
+  ],
   "clean": true
 },
     "schema": {"code": "str",
