--- a/rpi-rf-receiver/config.json
+++ b/rpi-rf-receiver/config.json
@@ -8,6 +8,7 @@
     "devices": ["/dev/mem:/dev/mem:rw"],
     "privileged": ["SYS_RAWIO"],
     "gpio": "true",
+    "apparmor": "false",
     "ports": {"5055/tcp": null},
     "options": {
   "code": "/share/rpi-rf_receive.py",
