--- a/rpi-rf-receiver/Dockerfile
+++ b/rpi-rf-receiver/Dockerfile
@@ -18,8 +18,8 @@ RUN apk add --no-cache mosquitto
 RUN apk add --no-cache mosquitto-dev
 RUN apk add --no-cache mosquitto-clients
 RUN apk add --no-cache mosquitto-libs
-#RUN pip install pyaes
-#RUN pip install pycrypto
+RUN pip install pyaes
+RUN pip install pycrypto
 RUN apk add --no-cache \
     	jq \
         py-pip \
